--- a/com.kubelt.lib.rpc.html
+++ b/com.kubelt.lib.rpc.html
@@ -39,7 +39,7 @@
    [com.kubelt.lib.promise :as lib.promise]
    [com.kubelt.rpc :as rpc]
    [com.kubelt.rpc.schema :as rpc.schema]
-   [com.kubelt.sdk.v1.core :as sdk.core]))</pre>
+   [com.kubelt.sdk.v1.oort :as sdk.oort]))</pre>
 				</td>
 			</tr>
 			<tr>
@@ -51,9 +51,9 @@
   (lib.promise/promise
    (fn [resolve reject]
      (let [wallet-address (-&gt; sys :crypto/wallet :wallet/address)
-           client (-&gt; {:uri/domain (-&gt; sys :client/p2p :http/host)
-                       :uri/port (-&gt; sys :client/p2p :http/port)
-                       :uri/scheme (-&gt; sys :client/p2p :http/scheme)
+           client (-&gt; {:uri/domain (-&gt; sys :client/oort :http/host)
+                       :uri/port (-&gt; sys :client/oort :http/port)
+                       :uri/scheme (-&gt; sys :client/oort :http/scheme)
                        :uri/path (cstr/join  [&quot;/@&quot; wallet-address &quot;/jsonrpc&quot;])
                        :http/client (:client/http sys)
                        :rpc/jwt (get-in sys [:crypto/session :vault/tokens* wallet-address])}
@@ -63,7 +63,7 @@
            rpc-method (:method/name (:rpc/method request))
            rpc-params (:rpc/params request)]
        (if (:rpc-client-type args)
-         (-&gt; (sdk.core/call-rpc-method sys wallet-address rpc-method (into [] (vals rpc-params)))
+         (-&gt; (sdk.oort/call-rpc-method sys wallet-address rpc-method (into [] (vals rpc-params)))
              (lib.promise/then resolve)
              (lib.promise/catch reject))
          (-&gt; (rpc/execute client request)
