--- a/dapp.sdk-test.html
+++ b/dapp.sdk-test.html
@@ -60,38 +60,38 @@
                                 (lib.json/json-str-&gt;edn))]
                    (is (= data
                           {:options
-                           {:credential/jwt    {},
-                            :ipfs.read/host    &quot;127.0.0.1&quot;,
-                            :p2p/host          &quot;127.0.0.1&quot;,
-                            :p2p/port          8787,
-                            :ipfs.write/port   5001,
-                            :log/level         :warn,
+                           {:app/name          &quot;kubelt-dapp&quot;,
+                            :credential/jwt    {},
+                            :oort/scheme        :http,
+                            :oort/host          &quot;127.0.0.1&quot;,
+                            :oort/port          8787,
                             :ipfs.read/scheme  :http,
-                            :app/name          &quot;kubelt-dapp&quot;,
-                            :p2p/scheme        :http,
+                            :ipfs.read/host    &quot;127.0.0.1&quot;,
+                            :ipfs.read/port    5001
                             :ipfs.write/scheme :http,
                             :ipfs.write/host   &quot;127.0.0.1&quot;,
-                            :ipfs.read/port    5001},
+                            :ipfs.write/port   5001,
+                            :log/level         :warn,},
                            :vault {:com.kubelt/type :kubelt.type/vault, :vault/tokens {}}})))
                  (let [data (&lt;p! (sdk.v1/restore&amp; sdk))]
                    (is (= app-name (:app/name data)))
-                   (is (= #{:credential/jwt
-                            :ipfs.read/host
-                            :p2p/host
-                            :p2p/port
-                            :crypto/wallet
-                            :ipfs.write/port
-                            :log/level
-                            :client/p2p
-                            :ipfs.read/scheme
+                   (is (= #{:app/name
                             :client/http
-                            :app/name
-                            :p2p/scheme
+                            :client/oort
                             :config/storage
-                            :ipfs.write/scheme
-                            :ipfs.write/host
+                            :credential/jwt
                             :crypto/session
-                            :ipfs.read/port}
+                            :crypto/wallet
+                            :ipfs.read/host
+                            :ipfs.read/port
+                            :ipfs.read/scheme
+                            :ipfs.write/host
+                            :ipfs.write/port
+                            :ipfs.write/scheme
+                            :log/level
+                            :oort/host
+                            :oort/port
+                            :oort/scheme}
                           (set (keys data))))))
                (catch js/Error err (log/error err))
                (finally (done)))))))</pre>
