--- a/dapp.wallet.html
+++ b/dapp.wallet.html
@@ -34,7 +34,7 @@
 					<pre class="brush: clojure">(ns dapp.wallet
   (:require
    [com.kubelt.sdk.v1 :as sdk.v1]
-   [com.kubelt.sdk.v1.core :as sdk.core]
+   [com.kubelt.sdk.v1.oort :as sdk.oort]
    [re-frame.core :as re-frame]
    [taoensso.timbre :as log]))</pre>
 				</td>
@@ -110,8 +110,8 @@
  ::set-current-wallet
  (fn [db [_ wallet]]
    (let [ctx (:sdk/ctx db)]
-     ;; `sdk.core/set-wallet` also validates the structure of `wallet`
-     (.then (sdk.core/set-wallet ctx wallet)
+     ;; `sdk.oort/set-wallet` also validates the structure of `wallet`
+     (.then (sdk.oort/set-wallet ctx wallet)
             (fn [new-ctx]
               (re-frame/dispatch [::authenticate! new-ctx])))
      db)))</pre>
@@ -126,7 +126,7 @@
  ::authenticate!
  (fn [db [_ new-ctx]]
    (let [wallet-address (get-in new-ctx [:crypto/wallet :wallet/address])]
-     (-&gt; (sdk.core/authenticate&amp; new-ctx)
+     (-&gt; (sdk.oort/authenticate&amp; new-ctx)
          (.then (fn [auth-ctx]
                   (log/info {:message (str &quot;Authenticating a new wallet with address: &quot; wallet-address)})
                   ;; must dispatch the next event within the promise
@@ -259,7 +259,7 @@
  :&lt;- [::ctx]
  :&lt;- [::wallet]
  (fn [[ctx {:wallet/keys [address] :as _wallet}] _]
-   (sdk.core/logged-in? ctx address)))</pre>
+   (sdk.oort/logged-in? ctx address)))</pre>
 				</td>
 			</tr>
 			<tr>
