--- a/index.html
+++ b/index.html
@@ -369,28 +369,28 @@
 								<a href="com.kubelt.ddt.cmds.rpc.call.html">com.kubelt.ddt.cmds.rpc.call</a>
 							</li>
 							<li>
-								<a href="com.kubelt.ddt.cmds.rpc.core.html">com.kubelt.ddt.cmds.rpc.core</a>
-							</li>
-							<li>
-								<a href="com.kubelt.ddt.cmds.rpc.core.config.html">com.kubelt.ddt.cmds.rpc.core.config</a>
-							</li>
-							<li>
-								<a href="com.kubelt.ddt.cmds.rpc.core.config.get.html">com.kubelt.ddt.cmds.rpc.core.config.get</a>
-							</li>
-							<li>
-								<a href="com.kubelt.ddt.cmds.rpc.core.config.set.html">com.kubelt.ddt.cmds.rpc.core.config.set</a>
-							</li>
-							<li>
-								<a href="com.kubelt.ddt.cmds.rpc.core.profile.html">com.kubelt.ddt.cmds.rpc.core.profile</a>
-							</li>
-							<li>
-								<a href="com.kubelt.ddt.cmds.rpc.core.profile.get.html">com.kubelt.ddt.cmds.rpc.core.profile.get</a>
-							</li>
-							<li>
-								<a href="com.kubelt.ddt.cmds.rpc.core.profile.set.html">com.kubelt.ddt.cmds.rpc.core.profile.set</a>
-							</li>
-							<li>
 								<a href="com.kubelt.ddt.cmds.rpc.ls.html">com.kubelt.ddt.cmds.rpc.ls</a>
+							</li>
+							<li>
+								<a href="com.kubelt.ddt.cmds.rpc.oort.html">com.kubelt.ddt.cmds.rpc.oort</a>
+							</li>
+							<li>
+								<a href="com.kubelt.ddt.cmds.rpc.oort.config.html">com.kubelt.ddt.cmds.rpc.oort.config</a>
+							</li>
+							<li>
+								<a href="com.kubelt.ddt.cmds.rpc.oort.config.get.html">com.kubelt.ddt.cmds.rpc.oort.config.get</a>
+							</li>
+							<li>
+								<a href="com.kubelt.ddt.cmds.rpc.oort.config.set.html">com.kubelt.ddt.cmds.rpc.oort.config.set</a>
+							</li>
+							<li>
+								<a href="com.kubelt.ddt.cmds.rpc.oort.profile.html">com.kubelt.ddt.cmds.rpc.oort.profile</a>
+							</li>
+							<li>
+								<a href="com.kubelt.ddt.cmds.rpc.oort.profile.get.html">com.kubelt.ddt.cmds.rpc.oort.profile.get</a>
+							</li>
+							<li>
+								<a href="com.kubelt.ddt.cmds.rpc.oort.profile.set.html">com.kubelt.ddt.cmds.rpc.oort.profile.set</a>
 							</li>
 							<li>
 								<a href="com.kubelt.ddt.cmds.sdk.html">com.kubelt.ddt.cmds.sdk</a>
@@ -624,7 +624,7 @@
 								<a href="octet.cljc.html">octet.cljc</a>
 							</li>
 							<li>
-								<a href="com.kubelt.lib.p2p.html">com.kubelt.lib.p2p</a>
+								<a href="com.kubelt.lib.oort.html">com.kubelt.lib.oort</a>
 							</li>
 							<li>
 								<a href="com.kubelt.lib.path.html">com.kubelt.lib.path</a>
@@ -729,7 +729,7 @@
 								<a href="com.kubelt.sdk.v1.html">com.kubelt.sdk.v1</a>
 							</li>
 							<li>
-								<a href="com.kubelt.sdk.v1.core.html">com.kubelt.sdk.v1.core</a>
+								<a href="com.kubelt.sdk.v1.oort.html">com.kubelt.sdk.v1.oort</a>
 							</li>
 							<li>
 								<a href="com.kubelt.spec.html">com.kubelt.spec</a>
