--- a/com.kubelt.ddt.auth.html
+++ b/com.kubelt.ddt.auth.html
@@ -39,7 +39,7 @@
    [com.kubelt.lib.storage :as lib.storage]
    [com.kubelt.lib.wallet :as lib.wallet]
    [com.kubelt.sdk.v1 :as sdk]
-   [com.kubelt.sdk.v1.core :as sdk.core]))</pre>
+   [com.kubelt.sdk.v1.oort :as sdk.oort]))</pre>
 				</td>
 			</tr>
 			<tr>
@@ -90,7 +90,7 @@
                        (prn (:error e))))
                  (lib.promise/then
                   (fn [kbt]
-                    (-&gt; (sdk.core/authenticate&amp; kbt)
+                    (-&gt; (sdk.oort/authenticate&amp; kbt)
                         (lib.promise/then on-authenticate)
                         (lib.promise/catch
                          (fn [e]
