--- a/com.kubelt.ddt.cmds.rpc.call.html
+++ b/com.kubelt.ddt.cmds.rpc.call.html
@@ -34,17 +34,17 @@
 					<pre class="brush: clojure">(ns com.kubelt.ddt.cmds.rpc.call
   {:copyright &quot;ⓒ2022 Proof Zero Inc.&quot; :license &quot;Apache 2.0&quot;}
   (:require
-   [clojure.string :as cstr]
-   [cljs.reader :as r])
+   [cljs.reader :as r]
+   [clojure.string :as cstr])
   (:require
    [com.kubelt.ddt.auth :as ddt.auth]
    [com.kubelt.ddt.options :as ddt.options]
    [com.kubelt.ddt.prompt :as ddt.prompt]
-   [com.kubelt.lib.json :as lib.json]
    [com.kubelt.ddt.util :as ddt.util]
-   [com.kubelt.lib.rpc :as lib.rpc]
+   [com.kubelt.lib.json :as lib.json]
    [com.kubelt.lib.promise :as lib.promise]
-   [com.kubelt.sdk.v1.core :as sdk.core]))</pre>
+   [com.kubelt.lib.rpc :as lib.rpc]
+   [com.kubelt.sdk.v1.oort :as sdk.oort]))</pre>
 				</td>
 			</tr>
 			<tr>
@@ -148,7 +148,7 @@
                     args
                     (.-password result)
                     (fn [sys]
-                      (-&gt; (sdk.core/rpc-api sys (-&gt; sys :crypto/wallet :wallet/address))
+                      (-&gt; (sdk.oort/rpc-api sys (-&gt; sys :crypto/wallet :wallet/address))
                           (lib.promise/then
                            (fn [api]
                              (-&gt; (lib.rpc/rpc-call&amp; sys api args)
@@ -187,7 +187,7 @@
            args
            (.-password result)
            (fn [sys]
-             (-&gt; (sdk.core/rpc-api sys (-&gt; sys :crypto/wallet :wallet/address))
+             (-&gt; (sdk.oort/rpc-api sys (-&gt; sys :crypto/wallet :wallet/address))
                  (lib.promise/then
                   (fn [api]
                     (-&gt; (lib.rpc/rpc-call&amp; sys api args)
