--- a/com.kubelt.ddt.cmds.rpc.oort.config.html
+++ b/com.kubelt.ddt.cmds.rpc.oort.config.html
@@ -19,7 +19,7 @@
 				<td class="docs">
 					<div class="docs-header">
 						<a class="anchor" href="#repl" name="repl">
-							<h1 class="project-name">com.kubelt.ddt.cmds.rpc.core.profile.set</h1>
+							<h1 class="project-name">com.kubelt.ddt.cmds.rpc.oort.config</h1>
 							<a class="toc-link" href="index.html">toc</a>
 						</a>
 					</div>
@@ -28,14 +28,14 @@
 			</tr>
 			<tr>
 				<td class="docs">
-					<p>RPC core options</p>
+					<p>RPC oort options</p>
 				</td>
 				<td class="codes">
-					<pre class="brush: clojure">(ns com.kubelt.ddt.cmds.rpc.core.profile.set
+					<pre class="brush: clojure">(ns com.kubelt.ddt.cmds.rpc.oort.config
   {:copyright &quot;ⓒ2022 Proof Zero Inc.&quot; :license &quot;Apache 2.0&quot;}
   (:require
-   [com.kubelt.ddt.cmds.rpc.call :as rpc.call ]
-   [com.kubelt.ddt.options :as ddt.options]))</pre>
+   [com.kubelt.ddt.cmds.rpc.oort.config.get :as oort.config.get]
+   [com.kubelt.ddt.cmds.rpc.oort.config.set :as oort.config.set]))</pre>
 				</td>
 			</tr>
 			<tr>
@@ -44,14 +44,13 @@
 				</td>
 				<td class="codes">
 					<pre class="brush: clojure">(defonce command
-  {:command &quot;set &lt;profile-value&gt;&quot;
-   :desc &quot;Make an RPC call to set profile value (by default in json)&quot;
-   :requiresArg true
-   :builder (fn [^Yargs yargs]
-              (ddt.options/options yargs)
-              (.option yargs rpc.call/ethers-rpc-name rpc.call/ethers-rpc-config)
-              (.option yargs rpc.call/edn-name rpc.call/edn-value))
-   :handler (rpc.call/ddt-rpc-call &quot;:kb:set:profile&quot; [:profile-value])})</pre>
+  {:command &quot;config&quot;
+   :desc &quot;Work with RPC core config APIs&quot;
+   :builder (fn [^js yargs]
+              (-&gt; yargs
+                  (.command (clj-&gt;js oort.config.get/command))
+                  (.command (clj-&gt;js oort.config.set/command))
+                  (.demandCommand)))})</pre>
 				</td>
 			</tr>
 			<tr>
