--- a/com.kubelt.ddt.cmds.rpc.oort.html
+++ b/com.kubelt.ddt.cmds.rpc.oort.html
@@ -19,7 +19,7 @@
 				<td class="docs">
 					<div class="docs-header">
 						<a class="anchor" href="#repl" name="repl">
-							<h1 class="project-name">com.kubelt.ddt.cmds.rpc.core</h1>
+							<h1 class="project-name">com.kubelt.ddt.cmds.rpc.oort</h1>
 							<a class="toc-link" href="index.html">toc</a>
 						</a>
 					</div>
@@ -28,14 +28,14 @@
 			</tr>
 			<tr>
 				<td class="docs">
-					<p>RPC core options</p>
+					<p>RPC oort options</p>
 				</td>
 				<td class="codes">
-					<pre class="brush: clojure">(ns com.kubelt.ddt.cmds.rpc.core
+					<pre class="brush: clojure">(ns com.kubelt.ddt.cmds.rpc.oort
   {:copyright &quot;ⓒ2022 Proof Zero Inc.&quot; :license &quot;Apache 2.0&quot;}
   (:require
-   [com.kubelt.ddt.cmds.rpc.core.config :as core.config]
-   [com.kubelt.ddt.cmds.rpc.core.profile :as core.profile]))</pre>
+   [com.kubelt.ddt.cmds.rpc.oort.config :as oort.config]
+   [com.kubelt.ddt.cmds.rpc.oort.profile :as oort.profile]))</pre>
 				</td>
 			</tr>
 			<tr>
@@ -44,12 +44,12 @@
 				</td>
 				<td class="codes">
 					<pre class="brush: clojure">(defonce command
-  {:command &quot;core &lt;command&gt;&quot;
-   :desc &quot;Work with RPC core APIs&quot;
+  {:command &quot;oort &lt;command&gt;&quot;
+   :desc &quot;Work with RPC oort APIs&quot;
    :builder (fn [^js yargs]
               (-&gt; yargs
-                  (.command (clj-&gt;js core.config/command))
-                  (.command (clj-&gt;js core.profile/command))
+                  (.command (clj-&gt;js oort.config/command))
+                  (.command (clj-&gt;js oort.profile/command))
                   (.demandCommand)))})</pre>
 				</td>
 			</tr>
