--- a/com.kubelt.ddt.cmds.rpc.oort.profile.get.html
+++ b/com.kubelt.ddt.cmds.rpc.oort.profile.get.html
@@ -19,7 +19,7 @@
 				<td class="docs">
 					<div class="docs-header">
 						<a class="anchor" href="#repl" name="repl">
-							<h1 class="project-name">com.kubelt.ddt.cmds.rpc.core.profile</h1>
+							<h1 class="project-name">com.kubelt.ddt.cmds.rpc.oort.profile.get</h1>
 							<a class="toc-link" href="index.html">toc</a>
 						</a>
 					</div>
@@ -28,14 +28,14 @@
 			</tr>
 			<tr>
 				<td class="docs">
-					<p>RPC core options</p>
+					<p>RPC oort profile get</p>
 				</td>
 				<td class="codes">
-					<pre class="brush: clojure">(ns com.kubelt.ddt.cmds.rpc.core.profile
+					<pre class="brush: clojure">(ns com.kubelt.ddt.cmds.rpc.oort.profile.get
   {:copyright &quot;ⓒ2022 Proof Zero Inc.&quot; :license &quot;Apache 2.0&quot;}
   (:require
-   [com.kubelt.ddt.cmds.rpc.core.profile.get :as core.profile.get]
-   [com.kubelt.ddt.cmds.rpc.core.profile.set :as core.profile.set]))</pre>
+   [com.kubelt.ddt.cmds.rpc.call :as rpc.call]
+   [com.kubelt.ddt.options :as ddt.options]))</pre>
 				</td>
 			</tr>
 			<tr>
@@ -44,13 +44,13 @@
 				</td>
 				<td class="codes">
 					<pre class="brush: clojure">(defonce command
-  {:command &quot;profile&quot;
-   :desc &quot;Work with RPC core profile APIs&quot;
-   :builder (fn [^js yargs]
-              (-&gt; yargs
-                  (.command (clj-&gt;js core.profile.get/command))
-                  (.command (clj-&gt;js core.profile.set/command))
-                  (.demandCommand)))})</pre>
+  {:command &quot;get&quot;
+   :desc &quot;Make an RPC get profile call.&quot;
+   :requiresArg true
+   :builder (fn [^Yargs yargs]
+              (ddt.options/options yargs)
+              (.option yargs rpc.call/ethers-rpc-name rpc.call/ethers-rpc-config))
+   :handler (rpc.call/ddt-rpc-call &quot;:kb:get:profile&quot;)})</pre>
 				</td>
 			</tr>
 			<tr>
