--- a/com.kubelt.ddt.cmds.rpc.oort.profile.set.html
+++ b/com.kubelt.ddt.cmds.rpc.oort.profile.set.html
@@ -19,7 +19,7 @@
 				<td class="docs">
 					<div class="docs-header">
 						<a class="anchor" href="#repl" name="repl">
-							<h1 class="project-name">com.kubelt.ddt.cmds.rpc.core.config.get</h1>
+							<h1 class="project-name">com.kubelt.ddt.cmds.rpc.oort.profile.set</h1>
 							<a class="toc-link" href="index.html">toc</a>
 						</a>
 					</div>
@@ -28,13 +28,13 @@
 			</tr>
 			<tr>
 				<td class="docs">
-					<p>RPC core config get</p>
+					<p>RPC oort profile set options</p>
 				</td>
 				<td class="codes">
-					<pre class="brush: clojure">(ns com.kubelt.ddt.cmds.rpc.core.config.get
+					<pre class="brush: clojure">(ns com.kubelt.ddt.cmds.rpc.oort.profile.set
   {:copyright &quot;ⓒ2022 Proof Zero Inc.&quot; :license &quot;Apache 2.0&quot;}
   (:require
-   [com.kubelt.ddt.cmds.rpc.call :as rpc.call]
+   [com.kubelt.ddt.cmds.rpc.call :as rpc.call ]
    [com.kubelt.ddt.options :as ddt.options]))</pre>
 				</td>
 			</tr>
@@ -44,13 +44,14 @@
 				</td>
 				<td class="codes">
 					<pre class="brush: clojure">(defonce command
-  {:command &quot;get [path]&quot;
-   :desc &quot;Make an RPC call.&quot;
+  {:command &quot;set &lt;profile-value&gt;&quot;
+   :desc &quot;Make an RPC call to set profile value (by default in json)&quot;
    :requiresArg true
    :builder (fn [^Yargs yargs]
               (ddt.options/options yargs)
-              (.option yargs rpc.call/ethers-rpc-name rpc.call/ethers-rpc-config))
-   :handler (rpc.call/ddt-rpc-call &quot;:kb:get:config&quot;)})</pre>
+              (.option yargs rpc.call/ethers-rpc-name rpc.call/ethers-rpc-config)
+              (.option yargs rpc.call/edn-name rpc.call/edn-value))
+   :handler (rpc.call/ddt-rpc-call &quot;:kb:set:profile&quot; [:profile-value])})</pre>
 				</td>
 			</tr>
 			<tr>
