--- a/com.kubelt.lib.config.default.html
+++ b/com.kubelt.lib.config.default.html
@@ -92,10 +92,10 @@
 					
 				</td>
 				<td class="codes">
-					<pre class="brush: clojure">(def p2p
-  {:p2p/scheme :http
-   :p2p/host &quot;127.0.0.1&quot;
-   :p2p/port 8787})</pre>
+					<pre class="brush: clojure">(def oort
+  {:oort/scheme :http
+   :oort/host &quot;127.0.0.1&quot;
+   :oort/port 8787})</pre>
 				</td>
 			</tr>
 			<tr>
@@ -133,7 +133,7 @@
   (merge app
          ipfs
          log
-         p2p
+         oort
          credentials
          logging))</pre>
 				</td>
@@ -166,10 +166,10 @@
                                      :http/host (ig/ref :ipfs.write/host)
                                      :http/port (ig/ref :ipfs.write/port)}
                         :client/http (ig/ref :client/http)}
-          ;; Our connection to the Kubelt p2p system.
-          :client/p2p {:http/scheme (ig/ref :p2p/scheme)
-                       :http/host (ig/ref :p2p/host)
-                       :http/port (ig/ref :p2p/port)}
+          ;; Our connection to the Kubelt Oort backend.
+          :client/oort {:http/scheme (ig/ref :oort/scheme)
+                        :http/host (ig/ref :oort/host)
+                        :http/port (ig/ref :oort/port)}
           ;; A wrapper around platform configuration storage.
           :config/storage {:app/name (ig/ref :app/name)}
           ;; A crypto &quot;vault&quot; that stores session credentials.
