--- a/com.kubelt.lib.config.html
+++ b/com.kubelt.lib.config.html
@@ -60,7 +60,7 @@
     ;; JavaScript.
     (-&gt; config
         (update-in [:log/level] lib.config.util/str-&gt;kw)
-        (update-in [:p2p/scheme] lib.config.util/str-&gt;kw)
+        (update-in [:oort/scheme] lib.config.util/str-&gt;kw)
         (update-in [:ipfs.read/scheme] lib.config.util/str-&gt;kw)
         (update-in [:ipfs.write/scheme] lib.config.util/str-&gt;kw))))</pre>
 				</td>
