--- a/com.kubelt.rpc.auth-test.html
+++ b/com.kubelt.rpc.auth-test.html
@@ -35,14 +35,15 @@
   (:require
    [cljs.core.async :refer [go]]
    [cljs.core.async.interop :refer-macros [&lt;p!]]
-   [cljs.test :refer-macros [deftest is testing async use-fixtures] :as t]
+   [cljs.test :refer-macros [deftest is testing async use-fixtures] :as t])
+  (:require
    [taoensso.timbre :as log])
   (:require
-   [com.kubelt.rpc.test-commons :as t.commons]
    [com.kubelt.lib.test-utils :as lib.test-utils]
    [com.kubelt.lib.wallet.node :as wallet]
+   [com.kubelt.rpc.test-commons :as t.commons]
    [com.kubelt.sdk.v1 :as sdk]
-   [com.kubelt.sdk.v1.core :as sdk.core]))</pre>
+   [com.kubelt.sdk.v1.oort :as sdk.oort]))</pre>
 				</td>
 			</tr>
 			<tr>
@@ -65,11 +66,11 @@
     (async done
            (go
               (try
-               (let [config (t.commons/p2p-config)
+               (let [config (t.commons/oort-config)
                      sys (&lt;p! (sdk/init config))
                      wallet (&lt;p! (wallet/load&amp; t.commons/app-name t.commons/wallet-name t.commons/wallet-password))
                      core (:wallet/address wallet)
-                     kbt (&lt;p! (sdk.core/authenticate&amp; (assoc sys :crypto/wallet wallet)))]
+                     kbt (&lt;p! (sdk.oort/authenticate&amp; (assoc sys :crypto/wallet wallet)))]
                  (is (= {} (-&gt; sys :crypto/session :vault/tokens)))
                  (is (map? (get-in kbt [:crypto/session :vault/tokens core])))
                  (is (string? (get-in kbt [:crypto/session :vault/tokens* core]))))
