--- a/com.kubelt.spec.config.html
+++ b/com.kubelt.spec.config.html
@@ -119,9 +119,9 @@
    [:ipfs.write/scheme {:optional true} spec.http/scheme]
    [:ipfs.write/host {:optional true} spec.http/host]
    [:ipfs.write/port {:optional true} spec.http/port]
-   [:p2p/scheme {:optional true} spec.http/scheme]
-   [:p2p/host {:optional true} spec.http/host]
-   [:p2p/port {:optional true} spec.http/port]])</pre>
+   [:oort/scheme {:optional true} spec.http/scheme]
+   [:oort/host {:optional true} spec.http/host]
+   [:oort/port {:optional true} spec.http/port]])</pre>
 				</td>
 			</tr>
 			<tr>
