deploy: 2a59055a348b12993deafe49478fc3508266f4da

--- a/index.html
+++ b/index.html
@@ -882,6 +882,9 @@
 								<a href="com.kubelt.rpc.auth-test.html">com.kubelt.rpc.auth-test</a>
 							</li>
 							<li>
+								<a href="com.kubelt.rpc.nfts-test.html">com.kubelt.rpc.nfts-test</a>
+							</li>
+							<li>
 								<a href="com.kubelt.rpc.profile-test.html">com.kubelt.rpc.profile-test</a>
 							</li>
 							<li>
