--- a/com.kubelt.rpc.request.html
+++ b/com.kubelt.rpc.request.html
@@ -86,6 +86,18 @@
 			</tr>
 			<tr>
 				<td class="docs">
+					<p>some rpc methods expect an object instead of an array of args. We derive the expectation based on the rpc method specification</p>
+				</td>
+				<td class="codes">
+					<pre class="brush: clojure">(defn- adapt-params-shape
+  [method params]
+  (if (= &quot;object&quot; (-&gt; method :method/params :params :schema :type))
+    (first params)
+    params))</pre>
+				</td>
+			</tr>
+			<tr>
+				<td class="docs">
 					
 				</td>
 				<td class="codes">
@@ -104,7 +116,7 @@
         all-params (get method :method.params/all)
         ;; Collect parameters from the supplied parameter map, removing
         ;; any nil entries.
-        params (filter some? (map #(get params %) all-params))]
+        params (adapt-params-shape method (filter some? (map #(get params %) all-params)))]
     (lib.json/edn-&gt;json-forjs-str
      {:id request-id
       :jsonrpc rpc-version
