deploy: c1a5efaa74857a3e63afd04258cfc3476d093833

--- a/com.kubelt.rpc.nfts-test.html
+++ b/com.kubelt.rpc.nfts-test.html
@@ -91,7 +91,10 @@
                            :current-owner &quot;0x1919DB36cA2fa2e15F9000fd9CdC2EdCF863E685&quot;,
                            :chain &quot;ETH&quot;,
                            :collection-name &quot;CryptoPunksMarket&quot;,
-                           :network &quot;mainnet&quot;}]} nfts)))
+                           :network &quot;mainnet&quot;}],
+                         :total-items 1985,
+                         :total-pages 1985,
+                         :page-number 1} nfts)))
                (catch js/Error err (do
                                      (log/error err)
                                      (is false err)))
