--- a/com.kubelt.lib.storage.node.html
+++ b/com.kubelt.lib.storage.node.html
@@ -87,7 +87,7 @@
             (lib.promise/then
              (fn [data-str]
                (let [data (t/read r data-str)]
-                 {:data data}))))))))</pre>
+                 data))))))))</pre>
 				</td>
 			</tr>
 			<tr>
