--- a/com.kubelt.rpc.auth-test.html
+++ b/com.kubelt.rpc.auth-test.html
@@ -73,6 +73,7 @@
                      kbt (&lt;p! (sdk.oort/authenticate&amp; (assoc sys :crypto/wallet wallet)))]
                  (is (= {} (-&gt; sys :crypto/session :vault/tokens)))
                  (is (map? (get-in kbt [:crypto/session :vault/tokens core])))
+                 (is (= :kubelt.type/vault (get-in kbt [:crypto/session :com.kubelt/type])))
                  (is (string? (get-in kbt [:crypto/session :vault/tokens* core]))))
                (catch js/Error err (do
                                      (log/error err)
