--- a/com.kubelt.sdk.v1.oort.html
+++ b/com.kubelt.sdk.v1.oort.html
@@ -38,6 +38,7 @@
    [com.kubelt.lib.http.status :as http.status]
    [com.kubelt.lib.jwt :as lib.jwt]
    [com.kubelt.lib.oort :as lib.oort]
+   [com.kubelt.lib.vault :as lib.vault]
    [com.kubelt.lib.promise :as lib.promise :refer [promise]]
    [com.kubelt.lib.wallet :as lib.wallet]))</pre>
 				</td>
@@ -101,8 +102,8 @@
                      ;; subset, e.g. tokens) to be frozen and thawed
                      ;; back out
                      (-&gt; sys
-                         (assoc-in [:crypto/session :vault/tokens core] decoded-jwt)
-                         (assoc-in [:crypto/session :vault/tokens* core] verify-result)))))))))))))</pre>
+                         (assoc :crypto/session (lib.vault/vault {core decoded-jwt}))
+                         (assoc-in [:crypto/session :vault/tokens*]  {core verify-result})))))))))))))</pre>
 				</td>
 			</tr>
 			<tr>
