--- a/com.kubelt.rpc.nfts-test.html
+++ b/com.kubelt.rpc.nfts-test.html
@@ -62,7 +62,7 @@
 					
 				</td>
 				<td class="codes">
-					<pre class="brush: clojure">(deftest rpc-nfts-test
+					<pre class="brush: clojure">(deftest rpc-qn-nfts-test
   (testing &quot;rpc core fetch nfts ... so far jwt not related with wallet(nfts owner) param&quot;
     (async done
            (go
@@ -92,9 +92,39 @@
                            :chain &quot;ETH&quot;,
                            :collection-name &quot;CryptoPunksMarket&quot;,
                            :network &quot;mainnet&quot;}],
-                         :total-items 1985,
-                         :total-pages 1985,
-                         :page-number 1} nfts)))
+                         :page-number 1}
+                        ;; not checking totals thus is a changing number over time
+                        (dissoc nfts :total-items :total-pages))))
+               (catch js/Error err (do
+                                     (log/error err)
+                                     (is false err)))
+               (finally (done)))))))</pre>
+				</td>
+			</tr>
+			<tr>
+				<td class="docs">
+					
+				</td>
+				<td class="codes">
+					<pre class="brush: clojure">(deftest rpc-alchemy-nfts-test
+  (testing &quot;rpc core fetch alchemy-nfts ... so far jwt not related with wallet(nfts owner) param&quot;
+    (async done
+           (go
+             (try
+               (let [config (t.commons/oort-config)
+                     sys (&lt;p! (sdk/init config))
+                     wallet (&lt;p! (wallet/load&amp; t.commons/app-name t.commons/wallet-name t.commons/wallet-password))
+                     core (:wallet/address wallet)
+                     kbt (&lt;p! (sdk.oort/authenticate&amp; (assoc sys :crypto/wallet wallet)))
+                     api (-&gt; (&lt;p! (sdk.oort/rpc-api sys core))
+                             (update :methods conj (&lt;! (lib.test-utils/read-local-edn&amp;go &quot;oort/methods/alchemy-get-nfts.edn&quot;))))
+                     nfts (&lt;p! (lib.rpc/rpc-call&amp; kbt api
+                                                  {:method  [:alchemy :get-nf-ts]
+                                                   :params {:params {:owner &quot;0xB0b9cd000A5AFA56d016C39470C3ec237df4e043&quot;}}}))]
+                 (is (= #{:owned-nfts :block-hash :total-count :page-key}
+                        (set (keys nfts))))
+                 (is (= (set (keys (first (:owned-nfts nfts))))
+                        #{:description :token-uri :contract :time-last-updated :title :balance :id :media :metadata})))
                (catch js/Error err (do
                                      (log/error err)
                                      (is false err)))
