deploy: 408287643a623ba7056561e985aba55191712ee8

--- a/com.kubelt.ddt.cmds.rpc.call.html
+++ b/com.kubelt.ddt.cmds.rpc.call.html
@@ -152,7 +152,7 @@
                           (lib.promise/then
                            (fn [api]
                              (-&gt; (lib.rpc/rpc-call&amp; sys api args)
-                                 (lib.promise/then #(println &quot;-&gt; &quot; %))
+                                 (lib.promise/then #(println &quot;-&gt; &quot; (-&gt; % :http/body :result)))
                                  (lib.promise/catch #(println &quot;ERROR-&gt; &quot; %)))))
                           (lib.promise/catch
                            (fn [e]
@@ -191,7 +191,7 @@
                  (lib.promise/then
                   (fn [api]
                     (-&gt; (lib.rpc/rpc-call&amp; sys api args)
-                        (lib.promise/then #(println &quot;-&gt; &quot; %))
+                        (lib.promise/then #(println &quot;-&gt; &quot; (-&gt; % :http/body :result)))
                         (lib.promise/catch #(println &quot;ERROR-&gt; &quot; %)))))
                  (lib.promise/catch
                   (fn [e]
