--- a/com.kubelt.rpc.profile-test.html
+++ b/com.kubelt.rpc.profile-test.html
@@ -73,7 +73,8 @@
                      core (:wallet/address wallet)
                      kbt (&lt;p! (sdk.oort/authenticate&amp; (assoc sys :crypto/wallet wallet)))
                      api (&lt;p! (sdk.oort/rpc-api sys core))
-                     profile (&lt;p! (lib.rpc/rpc-call&amp; kbt api {:method [:kb :get :profile]}))]
+                     profile (-&gt; (&lt;p! (lib.rpc/rpc-call&amp; kbt api {:method [:kb :get :profile]}))
+                                 :http/body :result)]
                  (is (= {:profile-picture
                          {:name &quot;DefaultKubeltPFP&quot;
                           :image-url 
@@ -87,7 +88,8 @@
                          :collection-token-id }}
                        _ (&lt;p! (lib.rpc/rpc-call&amp; kbt api {:method [:kb :set :profile]
                                                           :params {:profile updated-profile-picture}}))
-                       updated-profile (&lt;p! (lib.rpc/rpc-call&amp; kbt api {:method [:kb :get :profile]}))]
+                       updated-profile (-&gt; (&lt;p! (lib.rpc/rpc-call&amp; kbt api {:method [:kb :get :profile]}))
+                                           :http/body :result)]
                    (is (= updated-profile-picture updated-profile))))
                (catch js/Error err (do
                                      (log/error err)
