--- a/com.kubelt.rpc.nfts-test.html
+++ b/com.kubelt.rpc.nfts-test.html
@@ -74,12 +74,13 @@
                      kbt (&lt;p! (sdk.oort/authenticate&amp; (assoc sys :crypto/wallet wallet)))
                      api (-&gt; (&lt;p! (sdk.oort/rpc-api sys core))
                              (update :methods conj (&lt;! (lib.test-utils/read-local-edn&amp;go &quot;oort/methods/qn-fetch-nfts.edn&quot;))))
-                     nfts (&lt;p! (lib.rpc/rpc-call&amp; kbt api
-                                                  {:method  [:qn :fetch-nf-ts]
-                                                   :params {:params {:wallet &quot;0x505D79c7379EE65B6c2D6D18a0e7aB901b00756C&quot;
-                                                                     :omitFields [&quot;provenance&quot; &quot;traits&quot;]
-                                                                     :perPage 1
-                                                                     :page 1}}}))]
+                     nfts (-&gt; (&lt;p! (lib.rpc/rpc-call&amp; kbt api
+                                                   {:method  [:qn :fetch-nf-ts]
+                                                    :params {:params {:wallet &quot;0x505D79c7379EE65B6c2D6D18a0e7aB901b00756C&quot;
+                                                                      :omitFields [&quot;provenance&quot; &quot;traits&quot;]
+                                                                      :perPage 1
+                                                                      :page 1}}}))
+                              :http/body :result)]
                  (is (= {:owner &quot;0x505D79c7379EE65B6c2D6D18a0e7aB901b00756C&quot;,
                          :assets
                          [{:description &quot;CryptoPunksMarket&quot;,
@@ -118,9 +119,10 @@
                      kbt (&lt;p! (sdk.oort/authenticate&amp; (assoc sys :crypto/wallet wallet)))
                      api (-&gt; (&lt;p! (sdk.oort/rpc-api sys core))
                              (update :methods conj (&lt;! (lib.test-utils/read-local-edn&amp;go &quot;oort/methods/alchemy-get-nfts.edn&quot;))))
-                     nfts (&lt;p! (lib.rpc/rpc-call&amp; kbt api
-                                                  {:method  [:alchemy :get-nf-ts]
-                                                   :params {:params {:owner &quot;0xB0b9cd000A5AFA56d016C39470C3ec237df4e043&quot;}}}))]
+                     nfts (-&gt; (&lt;p! (lib.rpc/rpc-call&amp; kbt api
+                                                      {:method  [:alchemy :get-nf-ts]
+                                                       :params {:params {:owner &quot;0xB0b9cd000A5AFA56d016C39470C3ec237df4e043&quot;}}}))
+                              :http/body :result)]
                  (is (= #{:owned-nfts :block-hash :total-count :page-key}
                         (set (keys nfts))))
                  (is (= (set (keys (first (:owned-nfts nfts))))
